k8s_version/02_usecase_etl/k8s/iot-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-api
  labels:
    app: iot-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-api
  template:
    metadata:
      labels:
        app: iot-api
    spec:
      containers:
        - name: iot-api
          image: cheesecakeslice/airflow-workshop:v1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
