k8s_version/02_usecase_etl/k8s/iot-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-api
  labels:
    app: iot-api
spec:
  selector:
    app: iot-api
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: ClusterIP
