k8s_version/02_usecase_etl/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-telemetry-db
  labels:
    app: iot-telemetry-db
spec:
  selector:
    app: iot-telemetry-db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
